force-app/main/default/objects/aptk_styler__Lightning_Theme_Mapping__c/aptk_styler__Lightning_Theme_Mapping__c.object-meta.xml
<CustomObject>
    <label>Restyler Theme Mapping</label>
    <nameField>
        <displayFormat>LTM-{0000}</displayFormat>
        <label>Restyler Theme Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restyler Theme Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>