force-app/main/default/objects/aptk_styler__Lightning_Theme_Mapping__c/fields/aptk_styler__Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>aptk_styler__Profile_Id__c</fullName>
    <label>Profile Id</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>