force-app/main/default/objects/aptk_styler__Lightning_Theme_Mapping__c/fields/aptk_styler__Theme__c.field-meta.xml
<CustomField>
    <fullName>aptk_styler__Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Theme</label>
    <referenceTo>aptk_styler__Lightning_Theme__c</referenceTo>
    <relationshipName>Lightning_Theme_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>